# conan-quazip

./: .gitignore  CMakeLists-2.txt  CMakeLists.txt  README.md  build.py  conanfile.py
.github/workflows/: conan.yml
test_package/: CMakeLists.txt  conanfile.py  example.cpp
